implement inference microservice

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+absl-py==2.1.0
 annotated-types==0.7.0
 anyio==4.6.0
+astunparse==1.6.3
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
@@ -9,20 +11,37 @@ exceptiongroup==1.2.2
 fastapi==0.115.0
 fastapi-cli==0.0.5
 filelock==3.16.1
+flatbuffers==24.3.25
 fsspec==2024.9.0
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.66.1
 h11==0.14.0
+h5py==3.11.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.2
 huggingface-hub==0.25.1
 idna==3.10
+importlib_metadata==8.5.0
 Jinja2==3.1.4
+keras==3.5.0
+libclang==18.1.1
 load-dotenv==0.1.0
+Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
-numpy==2.0.2
+ml-dtypes==0.3.2
+mpmath==1.3.0
+namex==0.0.8
+networkx==3.2.1
+numpy==1.26.4
+opt-einsum==3.3.0
+optree==0.12.1
 packaging==24.1
+pillow==10.4.0
+protobuf==4.25.5
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
@@ -34,9 +53,18 @@ requests==2.32.3
 rich==13.8.1
 safetensors==0.4.5
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 starlette==0.38.6
+sympy==1.13.3
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.4.0
 tokenizers==0.19.1
+torch==2.2.2
+torchaudio==2.2.2
+torchvision==0.17.2
 tqdm==4.66.5
 transformers==4.44.2
 typer==0.12.5
@@ -46,3 +74,6 @@ uvicorn==0.30.6
 uvloop==0.20.0
 watchfiles==0.24.0
 websockets==13.1
+Werkzeug==3.0.4
+wrapt==1.16.0
+zipp==3.20.2
